--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
 
   <script>
     function openURL() {
-      var url = "src/pdf/Usama Resume.pdf";
+      var url = "src/pdf/usama-resume.pdf";
 
       window.open(url, "_blank");
     }
