--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
           </div>
 
           <div class="dp" data-aos="fade-up">
-            <img src="src/webp/MyPic.jpeg" alt="Mohammad Usama" tabindex="0" aria-label="image of vinod" />
+            <img src="src/webp/MyPic.jpeg" alt="Mohammad Usama" tabindex="0" aria-label="image of usama" />
           </div>
         </div>
       </div>
