--- a/index.html
+++ b/index.html
@@ -32,24 +32,24 @@
   <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#000" />
   <meta name="description"
-    content="Vinod Jangid | Portfolio, Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
+    content="Mohammad Usama | Portfolio, Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
   <meta name="keywords"
-    content="vinod jangid,vinod jangid portfolio,Vinod Jangid Portfolio,vinodjangid,vinod jangid site,Vinod Jangid Site,vinod jangid me,vinod jangid web,vinod jangid github,vinodjangid site,vinodjangid uiverse,uiverse,vinod jangid uiverse,vinod jangid frontend developer,frontend developer,vinod jangid jaipur,vinod jaipur" />
-  <meta name="author" content="Vinod Jangid" />
+    content="Mohammad Usama,Mohammad Usama portfolio,Mohammad Usama Portfolio,Mohammad Usama,Mohammad Usama site,Mohammad Usama Site,Mohammad Usama me,Mohammad Usama web,Mohammad Usama github,Mohammad Usama site,Mohammad Usama uiverse,uiverse,Mohammad Usama uiverse,Mohammad Usama frontend developer,frontend developer,Mohammad Usama jaipur,Mohammad Usama" />
+  <meta name="author" content="Mohammad Usama" />
   <meta property="og:image" content="https://www.vinodjangid.site/src/png/Preview-card-min.png" />
-  <meta property="og:title" content="Vinod Jangid | Portfolio" />
+  <meta property="og:title" content="Mohammad Usama | Portfolio" />
   <meta property="og:description"
-    content="Hi! My name is Vinod. I'm a web developer and digital visual artist. Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
+    content="Hi! My name is Usama. I'm a web developer and digital visual artist. Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
 
   <meta property="og:url" content="https://vinodjangid.site" />
-  <meta property="og:site_name" content="Vinod Jangid Portfolio" />
+  <meta property="og:site_name" content="Mohammad Usama Portfolio" />
 
   <meta name="twitter:image:src" content="https://www.vinodjangid.site/src/png/Preview-card-min.png" />
   <meta name="twitter:site" content="@Portfolio" />
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="Vinod Jangid | Portfolio" />
+  <meta name="twitter:title" content="Mohammad Usama | Portfolio" />
   <meta name="twitter:description"
-    content="Hi! My name is Vinod. I'm a web developer and digital visual artist. Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
+    content="Hi! My name is Usama. I'm a web developer and digital visual artist. Visit and know about me & my projects/designs. I value simple content structure, clean design patterns, and thoughtful interactions." />
   <title>Mohammad Usama | Portfolio</title>
   <link rel="icon" type="image/x-icon" href="src/png/main-favicon.png" />
   <!-- aos cdn -->
@@ -75,7 +75,7 @@
 
     <div class="navbar" id="navbar">
       <div class="hey">Hey!</div>
-      <div class="logo" tabindex="0" aria-label="vinod jangid logo">
+      <div class="logo" tabindex="0" aria-label="Mohammad Usama logo">
         <div class="logo-top">
           <img src="src/png/nav-avatar.png" alt="animation-head" id="nav-avatar" />
         </div>
